create github pages

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html website templates</a></section><section class="cid-s5Xj64iaR9" data-bg-video="https://www.youtube.com/watch?v=dQw4w9WgXcQ" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="cid-s5Xj64iaR9" data-bg-video="https://www.youtube.com/watch?v=dQw4w9WgXcQ" id="header2-1">
 
     
 
