--- a/page1.html
+++ b/page1.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="header1 cid-s5XlEH9JaA mbr-fullscreen mbr-parallax-background" id="header1-7">
+<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section class="header1 cid-s5XlEH9JaA mbr-fullscreen mbr-parallax-background" id="header1-7">
 
     
 
@@ -78,7 +78,7 @@
                     Or this is a 404 i dunno</h3>
                 <p class="mbr-text align-center pb-3 mbr-fonts-style display-5">
                     Please just gimmi some time to make the thingies</p>
-                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-secondary display-4" href="https://mobirise.co"><span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
+                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-secondary display-4" href="index.html"><span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
                         GO BACK HOME</a></div>
             </div>
         </div>
